<resources>
    <!-- Welcome Activity -->
    <string name="app_name">SportBuddy</string>
    <string name="app_greetings">Welcome to SportBuddy!</string>
    <string name="app_greetings2">The future of sports matchmaking</string>
    <string name="register">New here?</string>
    <string name="login">Already a member</string>
    <string name="terms">Terms of service</string>
    <string name="logo">Logo</string>

    <!-- Profile Activity -->
    <string name="profile_picture">Profile</string>
    <string name="profile_name">Full name</string>
    <string name="profile_age">Age</string>
    <string name="tiers">Tier 1</string>
    <string name="acquire_gold_silver">Acquire Gold/Silver</string>
    <string name="stats">Stats</string>
    <string name="stats_page">Your stats are displayed here</string>
    <string name="settings">Settings But</string>

    <!-- Login/Register Activity -->
    <string name="home">Home</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_hint">Insert your username</string>
    <string name="email_hint">Insert your email</string>
    <string name="password_hint">Insert your password</string>
    <string name="verify_password">Verify your password</string>
    <string name="birthday">Insert your birthday</string>
    <string name="switch_signedIN">Keep me signed in</string>
    <string name="forgot_password">Forget your password?</string>
    <string name="phone_number">Insert your phone number</string>
    <string name="create_account">Create account</string>
    <string name="policies">I agree with</string>
    <string name="switch_privacy_policies">I agree with Privacy Policies</string>
    <string name="nation_hint">Insert your nationality</string>
    <string name="etapa1">Part 1/2</string>
    <string name="etapa2">Part 2/2</string>

    <!-- Main Activity -->
    <string name="map_button">Map</string>
    <string name="start_game_button">Matchmaking</string>
    <string name="profile_button">Profile</string>

    <!-- MM Activity -->
    <string name="seekbar_text">How far you want to go?</string>
    <string name="range_text">Your range is 0KM</string>
    <string name="select_hint">Select Modality</string>
    <string name="auto_complete_txt"></string>

    <!-- Lobby Activity -->
    <string name="edit_notes">Edit a note</string>
    <string name="title_hint">Lobby title here</string>
    <string name="notes_label">Participants here</string>
    <string name="note_hint">Lobby description here</string>
    <string name="modify_date">Last modified date</string>
    <string name="save_note_menu">Save note</string>

    <!-- General -->
    <string name="next_page">Next</string>
    <string name="previous_page">Back</string>
    <string name="close_page">Close page</string>

    <!-- Settings -->
    <string name="account_settings">Account Settings</string>
    <string name="personal_profile">Personal Profile</string>
    <string name="match_preferences">Match Preferences</string>
    <string name="notifications">Notifications</string>
    <string name="delete_account">Delete SportBuddy account</string>
    <string name="edit_pp">Edit profile photo</string>
    <string name="nickname">Nickname</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="nationality">Nationality</string>
    <string name="email">E-mail Address</string>
    <string name="match_suggestions">Receive match suggestions</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="email_notifications">Email Notifications</string>
    <string name="delete_acc">Are you sure to delete your account?</string>
    <string name="delete">DELETE</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>