<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B2000000"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:layout_editor_absoluteX="-180dp"
        tools:layout_editor_absoluteY="-327dp">

        <ImageView
            android:id="@+id/main_applogo"
            android:layout_width="250dp"
            android:layout_height="140dp"
            android:background="#FF9800"
            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toBottomOf="@+id/main_termsofservice_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.307"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/main_greetings1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="132dp"
            android:fontFamily="sans-serif"
            android:text="@string/app_greetings"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/main_applogo"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="@+id/main_applogo"
            app:layout_constraintTop_toBottomOf="@+id/main_applogo" />

        <TextView
            android:id="@+id/main_greetings2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/app_greetings2"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/main_greetings1"
            app:layout_constraintStart_toStartOf="@+id/main_greetings1"
            app:layout_constraintTop_toBottomOf="@+id/main_greetings1" />

        <Button
            android:id="@+id/main_register_button"
            android:layout_width="167dp"
            android:layout_height="65dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#FF9800"
            android:text="@string/register"
            android:textColor="#030000"
            app:layout_constraintEnd_toEndOf="@+id/main_greetings2"
            app:layout_constraintStart_toStartOf="@+id/main_greetings2"
            app:layout_constraintTop_toBottomOf="@+id/main_greetings2"
            app:rippleColor="#000000" />

        <Button
            android:id="@+id/main_login_button"
            android:layout_width="167dp"
            android:layout_height="65dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="#55FF9800"
            android:text="@string/login"
            android:textColor="#FF9800"
            app:layout_constraintEnd_toEndOf="@+id/main_register_button"
            app:layout_constraintStart_toStartOf="@+id/main_register_button"
            app:layout_constraintTop_toBottomOf="@+id/main_register_button"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/main_termsofservice_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/terms"
            android:textColor="#4C000000"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/main_login_button"
            app:layout_constraintStart_toStartOf="@+id/main_login_button"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_part1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="200dp"
            android:text="@string/etapa1"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
            app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
            app:layout_constraintHorizontal_bias="0.439"
            app:layout_constraintStart_toStartOf="@+id/tableLayout2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TableLayout
            android:id="@+id/tableLayout2"
            android:layout_width="360dp"
            android:layout_height="450dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="360dp"
                    android:layout_height="90dp"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:text="@string/username_hint"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextTextEmailAddress3"
                    android:layout_width="360dp"
                    android:layout_height="90dp"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:text="@string/email_hint"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="360dp"
                    android:layout_height="90dp"
                    android:ems="10"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="#BDBDBD" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextTextPassword3"
                    android:layout_width="360dp"
                    android:layout_height="90dp"
                    android:ems="10"
                    android:hint="@string/verify_password"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#BDBDBD" />
            </TableRow>

            <TableRow
                android:layout_width="360dp"
                android:layout_height="90dp">

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="360dp"
                    android:layout_height="90dp"
                    android:ems="10"
                    android:inputType="date"
                    android:text="@string/birthday"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF9800"
            android:text="@string/next_page"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
            app:layout_constraintVertical_bias="0.196"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF9800"
            android:text="@string/previous_page"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tableLayout2"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
            app:layout_constraintVertical_bias="0.196"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>