<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B2000000"
    tools:context=".LoginActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="398dp"
        android:layout_height="482dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/border_frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469">

    </FrameLayout>

    <TableLayout
        android:id="@+id/login_login_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="@+id/frameLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/login_text_username"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/login_username_text"
                android:layout_width="wrap_content"
                android:layout_height="66dp"
                android:autofillHints="username"
                android:ems="10"
                android:hint="@string/username_hint"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHint="#BDBDBD" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="76dp">

            <TextView
                android:id="@+id/login_text_password"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/login_password_text"
                android:layout_width="wrap_content"
                android:layout_height="66dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHint="#BDBDBD" />
        </TableRow>
    </TableLayout>

    <Switch
        android:id="@+id/login_switch"
        android:layout_width="206dp"
        android:layout_height="56dp"
        android:layout_marginTop="35dp"
        android:text="@string/switch_signedIN"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/login_login_table"
        app:layout_constraintStart_toStartOf="@+id/login_login_table"
        app:layout_constraintTop_toBottomOf="@+id/login_login_table"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/login_login_forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/forgot_password"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        app:layout_constraintEnd_toStartOf="@+id/login_nextbut"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/login_switch"
        app:layout_constraintTop_toBottomOf="@+id/login_switch"
        app:layout_constraintVertical_bias="0.110000014" />

    <ImageButton
        android:id="@+id/login_backbut"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="#00FF9800"
        android:contentDescription="@string/previous_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/login_nextbut"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_login_table"
        app:layout_constraintTop_toBottomOf="@+id/login_login_forgetpassword"
        app:layout_constraintVertical_bias="0.32999998"
        app:srcCompat="@drawable/arrow_back_ios_new"
        app:tint="#FF9800"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/login_nextbut"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginBottom="120dp"
        android:background="#FF9800"
        android:backgroundTint="#00FF9800"
        android:contentDescription="@string/next_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_login_table"
        app:layout_constraintTop_toBottomOf="@+id/login_login_forgetpassword"
        app:layout_constraintVertical_bias="0.32999998"
        app:srcCompat="@drawable/arrow_forward_ios"
        app:tint="#FF9800"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>